# Meduza

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Lua/: CMakeLists.txt
Meduza/: CMakeLists.txt  CreateProject.bat  Meduza.sln  MeduzaMake.lua  premake5.lua
Meduza/Include/: MePCH.h  Meduza.h  MeduzaIncluder.h
Meduza/Include/AI/: NavField.h
Meduza/Include/AI/Components/: AgentComponent.h  NavSurfaceComponent.h
Meduza/Include/AI/Systems/: AgentMovementSystem.h  NavSurfaceSystem.h
Meduza/Include/Core/: Application.h  Core.h  EntryPoint.h  Entrypoint.h  GUID.h  Meduza.h  MeduzaCore.h  MeduzaProfiler.h  ThreadPool.h  ValueContainer.h
Meduza/Include/Core/Components/: CameraComponent.h  Components.h  PhysicsComponent.h  RenderComponent.h  TransformComponent.h
Meduza/Include/Core/Project/: ProjectManager.h
Meduza/Include/Core/Scripting/: LuaFunctions.h  LuaScripting.h  ScriptComponent.h  ScriptComponentHelper.h  ScriptConfig.h  ScriptSystem.h
Meduza/Include/Core/Serialization/: Serializer.h
Meduza/Include/Core/Systems/: CameraSystem.h  EditorCameraSystem.h  MousePickingSystem.h  RenderSystem.h  SystemInitializer.h
Meduza/Include/ECS/: BaseComponent.h  BaseSystem.h  ComponentContainer.h  Entity.h  EntityManager.h  EntityTypes.h
Meduza/Include/Math/: GJKAlgorithm.h  Math.h  Matrix4.h  Matrix4.inl  MeduzaMath.h  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
Meduza/Include/Particles/: Particle.h
Meduza/Include/Particles/Components/: ParticleComponent.h  ParticleSystemComponent.h
Meduza/Include/Particles/Systems/: ParticleEmitterSystem.h  ParticleSystem.h
Meduza/Include/Physics/: Collision.h  GJKAlgorithm.h  Physics.h
Meduza/Include/Physics/Components/: BoxCollider2DComponent.h  BoxCollider3DComponent.h  CircleColliderComponent.h  ColliderComponent.h  PhysicsComponent.h  SphereColliderComponent.h
Meduza/Include/Physics/Systems/: ApplyForceSystem.h  BlockingSystem.h  Box2DDebugRenderSystem.h  Box3DDebugRenderSystem.h  BoxCollision2DSystem.h  BoxCollision3DSystem.h  CircleDebugRenderSystem.h  CollisionSystem.h  FluidDragSystem.h  FrictionSystem.h  GravitySystem.h  PhysicsSystem.h  PhysicsSystemBegin.h  PhysicsSystemEnd.h  SphereDebugRenderSystem.h
Meduza/Include/Platform/General/: ContextBase.h  MeshLibrary.h  ResourceLibrary.h  ShaderLibrary.h  TextureLibrary.h  Window.h
Meduza/Include/Platform/Linux/: LinuxWindow.h
Meduza/Include/Platform/MacOS/: MacOsWindow.h
Meduza/Include/Platform/Windows/: WindowsWindow.h
Meduza/Include/Utils/: MeduzaDebug.h  MeduzaUtils.h  ModelLoaderUtils.h  ResourceLoaderUtils.h  Timer.h
Meduza/Meduza/: Meduza.vcxproj  Meduza.vcxproj.filters
Meduza/Meduza/Gfx/: RenderLayer.cpp  RenderLayer.h
Meduza/Meduza/Helper/: Dx12_Helper.cpp  Dx12_Helper.h  Helper.h
Meduza/Meduza/Include/: Meduza.h  mePch.h
Meduza/Meduza/Renderer/: Meduza.cpp  Meduza.h
Meduza/Meduza/Source/: Meduza.cpp  mePch.cpp
Meduza/Meduza/Utils/: Camera.cpp  Camera.h
Meduza/Meduza/Window/: WinWindow.cpp  WinWindow.h  Window.cpp  Window.h
Meduza/Meduza/pch/: pch.h
Meduza/Sandbox/: Sandbox.aps  Sandbox.cpp  Sandbox.h  Sandbox.rc  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  main.cpp
Meduza/Sandbox/Include/: Sandbox.h  pch.h
Meduza/Sandbox/Resources/: PixelShader.hlsl  PixelShader2.hlsl  VertexShader.hlsl  VertexShader1.hlsl  VertexShader2.hlsl
Meduza/Sandbox/Source/: Sandbox.cpp  main.cpp
Meduza/Source/Core/: Application.cpp  Components.cpp  GUID.cpp  Meduza.cpp  ThreadPool.cpp  ValueContainer.cpp
Meduza/Source/ECS/: BaseComponent.cpp  BaseSystem.cpp  ComponentContainer.cpp  Entity.cpp  EntityManager.cpp
Meduza/Source/Math/: GJKAlgorithm.cpp  Math.cpp  MeduzaMath.cpp  Vector2.cpp  Vector3.cpp
Meduza/Source/Physics/: Collision.cpp  GJKAlgorithm.cpp  Physics.cpp
Meduza/Source/Utils/: MeduzaDebug.cpp  MeduzaUtils.cpp  ModelLoaderUtils.cpp  ResourceLoaderUtils.cpp
Sandbox/: CMakeLists.txt
Sandbox/Assets/Models/: Cube.glb
Sandbox/Assets/Prefab/: MonkeyHead.prefab
Sandbox/Assets/Scenes/: Box3D_check.xml  Collision_LuaTest_SadnessDestroyer.scene  Collision_LuaTest_SadnessDestroyer.xml  Megaman_Clone.scene  Megaman_Close.scene  MonkeyHeadScene.scene  MonkeyHeadScene.xml  MonkeyHeadSceneDX12.xml  Physics2D_test.scene  Physics2D_test.xml
Sandbox/Assets/Scripts/: CameraMovement.lua  CreateMonkeyHead.lua  DestroySadBox.lua  Helloworld.lua  MoveSideways.lua  RotateObject.lua  ScaleObject.lua  SetLocation.lua
Sandbox/Assets/Shaders/: Default_Shader.glsl  Default_Shader.hlsl  FlatColourLighted_Shader.hlsl  FlatColour_Shader.hlsl  LitColour_Shader.glsl  LitColour_Shader.hlsl  Lit_Shader.glsl  Lit_Shader.hlsl  UnlitColour_Shader.glsl  Unlit_Shader.glsl
Sandbox/Include/: Application.h  Game.h  PCH.h  Sandbox.h
Sandbox/Include/Components/: ChessBoardComponent.h  ChessComponent.h  CursorComponent.h  ForwardComponent.h  GameComponents.h  MoveComponent.h  PawnComponent.h  PlayerComponent.h  RotateComponent.h  TileComponent.h  UpComponent.h
Sandbox/Include/Games/: BaseGame.h  Chess.h
Sandbox/Include/Systems/: CameraControllerSystem.h  CheckerboardSystem.h  ChessSystem.h  ChessboardSystem.h  CursorSystem.h  MoveForwardSystem.h  MoveSystem.h  MoveUpSystem.h  PawnSystem.h  PlayerSystem.h  Rotator.h
Sandbox/Projects/MeduzaTests/: VisualStudio.bat  VisualStudioCode.bat
Sandbox/Resources/EditorLayout/: Default_Layout.ini
Sandbox/Resources/Shaders/: CircleShader.glsl  LineShader.glsl  LitColour_Shader.glsl  Lit_Shader.glsl  UnlitColour_Shader.glsl  Unlit_Shader.glsl
Sandbox/Source/: Application.cpp  Game.cpp  Main.cpp  Sandbox.cpp  main.cpp
Sandbox/Source/Components/: Components.cpp  CursorComponent.cpp  GameComponents.cpp  MoveComponent.cpp  TileComponent.cpp
Sandbox/Source/Games/: BaseGame.cpp  Chess.cpp  GameBase.cpp
Sandbox/Source/Systems/: CameraControllerSystem.cpp  CheckerboardSystem.cpp  ChessSystem.cpp  CursorSystem.cpp  MoveForwardSystem.cpp  MoveSystem.cpp  MoveUpSystem.cpp  PawnSystem.cpp  PlayerSystem.cpp  Rotator.cpp
(+531 files in other folders)
